# summary-func

./: .gitignore  AZURE_SETUP.md  DEPLOYMENT.md  ENV_TO_TERRAFORM.md  FIX_AZURE_DEPLOYMENT.md  MERMAID_ERROR_SOLUTION.md  QUICKSTART_ENV_TERRAFORM.md  README.md  Youtube_narration.md  app.py  host.json  local.settings.json  main.py  premium_article_full_guide.md  pyproject.toml  requirements.txt  startup.sh  util.py  web.config  wsgi.py  有料記事_完全ガイド.md
.github/workflows/: deploy.yaml  main_news-summarizer-app.yml
SummarizeNews/: __init__.py  function.json  util.py
scripts/: env_to_tfvars.ps1  env_to_tfvars.py  env_to_tfvars.sh
static/: main.js  styles.css
templates/: index.html
terraform/: env.tf  main.tf  outputs.tf  variables.tf
