[project]
name = "news-summarizer-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.75.0",
    "anyio==4.11.0",
    "azure-core==1.36.0",
    "azure-data-tables==12.7.0",
    "azure-functions==1.24.0",
    "azure-storage-blob==12.27.1",
    "beautifulsoup4==4.14.2",
    "blinker==1.9.0",
    "bs4==0.0.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.3",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "exceptiongroup==1.3.0",
    "flask==3.1.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==1.1.2",
    "langchain-core==1.1.1",
    "langchain-openai==1.1.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.14",
    "langsmith==0.4.56",
    "markupsafe==3.0.3",
    "multidict==6.7.0",
    "openai==2.8.0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "propcache==0.4.1",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.1",
    "python-http-client==3.3.7",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "sendgrid==6.12.5",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uuid-utils==0.12.0",
    "werkzeug==3.1.3",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
